fix color overflow. pretify css. sort colors

--- a/src/components/color-picker/color-picker.module.css
+++ b/src/components/color-picker/color-picker.module.css
@@ -29,12 +29,12 @@
   justify-content: center;
   border: none;
   align-items: center;
-  font-size: 28px;
+  font-size: 24px;
   content: "";
   cursor: pointer;
   border-radius: 50%;
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
 }
 
 .add:before {
